# barlang-hs

./: .gitignore  ISSUES  TODO  barlang.cabal  barlang.html  index.html  mes.cabal  stack.yaml
src/: Main.hs  Tests.hs
src/Language/Barlang/: Compiler.hs  CompilerTypes.hs  Language.hs  Optimizer.hs  Parser.hs  Predefined.hs  PrettyPrint.hs
src/Language/Barlang/Test/: Parser.hs
src/Language/Mes/: Compiler.hs  Language.hs  Parser.hs  PrettyPrint.hs
test/: array.brl  color.brl  error.brl  gradient.brl  sine.brl  try1.brl  try2.brl  try3.brl  try4.brl
webapp/: Main.hs  barlang.css  barlang.js  deploy.sh  stack.yaml  try.sh
