name:                barlang

version:             0.1.0.0
synopsis:            Statically typed shell scripting domain language compiled to bash
-- description:         
homepage:            https://github.com/vigoo/barlang
license:             Apache-2.0
license-file:        LICENSE

author:              Daniel Vigovszky
maintainer:          daniel.vigovszky@gmail.com

-- copyright:           

category:            Language

build-type:          Simple

-- extra-source-files:  

cabal-version:       >=1.10


library
  hs-source-dirs:      src
  exposed-modules:     Language.Barlang.Compiler
                     , Language.Barlang.Language
                     , Language.Barlang.Parser
                     , Language.Barlang.PrettyPrint

  build-depends:       base >=4.7 && <4.8
                     , bash ==0.1.*
                     , binary
                     , bytestring
                     , code-builder
                     , containers
                     , mtl
                     , parsers
                     , trifecta
                     , utf8-string
                     , ansi-wl-pprint
                     , semigroups
                     , transformers
                     , unordered-containers
                     , shell-escape

                     , QuickCheck ==2.*
                     , HUnit
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2

  default-language:    Haskell2010

executable barlang
  main-is:             Main.hs

  -- other-modules:       
  -- other-extensions:    

  build-depends:       base >=4.7 && <4.8
                     , bash ==0.1.*
                     , binary
                     , bytestring
                     , code-builder
                     , containers
                     , directory
                     , mtl
                     , utf8-string
                     , parsers
                     , trifecta
                     , utf8-string
                     , ansi-wl-pprint
                     , semigroups
                     , transformers
                     , unordered-containers
                     , code-builder
                     , optparse-applicative
                     , shell-escape

                     , barlang
  
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite barlang-test
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs

  build-depends:       base >=4.7 && <4.8
                     , QuickCheck ==2.*
                     , HUnit
                     , parsers
                     , trifecta
                     , utf8-string
                     , ansi-wl-pprint
                     , semigroups
                     , transformers
                     , unordered-containers
                     , code-builder

                     , barlang

  hs-source-dirs:      src
  default-language:    Haskell2010
