name:                mes

-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            Statically typed shell scripting domain language compiled to bash
-- description:         
homepage:            https://github.com/vigoo/mes
license:             Apache-2.0
license-file:        LICENSE

author:              Daniel Vigovszky
maintainer:          daniel.vigovszky@gmail.com

-- copyright:           

category:            Language

build-type:          Simple

-- extra-source-files:  

cabal-version:       >=1.10


library
  hs-source-dirs:      src
  exposed-modules:     Language.Mes.Compiler
                     , Language.Mes.Language

  build-depends:       base >=4.7 && <4.8
                     , bash ==0.1.*
                     , binary
                     , bytestring
                     , containers
                     , mtl
                     , parsec
                     , utf8-string

  default-language:    Haskell2010

executable mes
  main-is:             Main.hs

  -- other-modules:       
  -- other-extensions:    

  build-depends:       base >=4.7 && <4.8
                     , bash ==0.1.*
                     , binary
                     , bytestring
                     , containers
                     , mtl
                     , utf8-string

                     , mes
  
  hs-source-dirs:      src
  default-language:    Haskell2010
  